tests/ui/delegation/self-mapping-arguments-errors.stderr
error: attempted to lower target expression with definitions more than once while mapping argument
  --> $DIR/self-mapping-arguments-errors.rs:14:5
   |
LL | /     reuse impl MyAdd for W {
...  |
LL | |         self.0
LL | |     }
   | |_____^

error[E0186]: method `add` has a `self` declaration in the trait, but not in the impl
  --> $DIR/self-mapping-arguments-errors.rs:14:5
   |
LL |           fn add(self, other: Self) -> Self;
   |           ---------------------------------- `self` used in trait
...
LL | /     reuse impl MyAdd for W {
...  |
LL | |         self.0
LL | |     }
   | |_____^ expected `self` in impl

error[E0277]: the trait bound `(): target_expr_doesnt_relower_when_defs_inside::MyAdd` is not satisfied
  --> $DIR/self-mapping-arguments-errors.rs:14:5
   |
LL | /     reuse impl MyAdd for W {
...  |
LL | |         self.0
LL | |     }
   | |_____^ the trait `target_expr_doesnt_relower_when_defs_inside::MyAdd` is not implemented for `()`
   |
help: the following other types implement trait `target_expr_doesnt_relower_when_defs_inside::MyAdd`
  --> $DIR/self-mapping-arguments-errors.rs:8:5
   |
LL |     impl MyAdd for usize {
   |     ^^^^^^^^^^^^^^^^^^^^ `usize`
...
LL |     reuse impl MyAdd for W {
   |     ^^^^^^^^^^^^^^^^^^^^^^ `target_expr_doesnt_relower_when_defs_inside::W`

error[E0061]: this function takes 2 arguments but 1 argument was supplied
  --> $DIR/self-mapping-arguments-errors.rs:14:5
   |
LL | /     reuse impl MyAdd for W {
...  |
LL | |         self.0
LL | |     }
   | |     ^
   | |     |
   | |_____argument #2 of type `()` is missing
   |       this implicit `()` return type influences the call expression's return type
   |
note: method defined here
  --> $DIR/self-mapping-arguments-errors.rs:5:12
   |
LL |         fn add(self, other: Self) -> Self;
   |            ^^^       -----
help: provide the argument
   |
LL ~     }({
LL +
LL +
LL +
LL +
LL +         println!("{self:?}");
LL +         fn foo() {
LL +             println!("hello");
LL +         }
LL + 
LL +         reuse foo as bar;
LL +         bar();
LL +         bar();
LL + 
LL +         self.0
LL +     }, ())
   |

error[E0308]: mismatched types
  --> $DIR/self-mapping-arguments-errors.rs:43:5
   |
LL |     reuse impl MyAdd for W { self.0 }
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |     |
   |     expected `Box<usize>`, found `Box<W>`
   |     arguments to this function are incorrect
   |     this return type influences the call expression's return type
   |
   = note: expected struct `Box<usize>`
              found struct `Box<complex_Self_doesnt_map::W>`
note: method defined here
  --> $DIR/self-mapping-arguments-errors.rs:34:12
   |
LL |         fn add(self, other: Box<Self>) -> Self;
   |            ^^^       -----

error: aborting due to 5 previous errors

Some errors have detailed explanations: E0061, E0186, E0277, E0308.
For more information about an error, try `rustc --explain E0061`.
